# samsara

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  README.zh-TW.md  issue.md  pyproject.toml  roadmap.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: question-form.yaml
.github/workflows/: ci.yml  release.yml
agents/: auto-gatekeeper.md  code-quality-reviewer.md  code-reviewer.md  implementer.md  infra-explorer.md  structure-explorer.md  yin-explorer.md
bugfix/2026-06-27_codex-global-hook-relative-path/: bug-report.yaml
bugfix/2026-06-27_references-not-portable-subagent-resolve/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
bugfix/2026-06-29_codex-global-hook-skill-path/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
bugfix/2026-07-02_codex-update-duplicate-hook-state/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
changes/2026-04-17_samsara-phase4-auto-iteration/: 1-kickoff.md  2-plan.md  acceptance.yaml  index.yaml  iteration-log.yaml  overview.md  problem-autopsy.md  ship-manifest.yaml
changes/2026-04-19_yin-coding-spirit/: 1-kickoff.md  2-plan.md  acceptance.yaml  index.yaml  iteration-log.yaml  overview.md  problem-autopsy.md  ship-manifest.yaml
changes/2026-04-21_planning-file-map-consistency/: 1-kickoff.md  2-plan.md  acceptance.yaml  index.yaml  overview.md  (+1 more)
docs/: design.md  develop.md  example.md  karpathy_claude_rules.md  philosophy.md  thinking.md
hooks/: check-codebase-map  hooks.json  session-start
references/: auto-mode.md  code-quality.md  code-review.md  iac-quality.md  iac-review.md  test-contract.md
samsara_cli/: __init__.py  main.py
scar-reports/: task-3-scar.yaml
tests/: conftest.py  task-1-death-tests.md
(+451 files in other folders)
