[build-system]
requires = [
  "uv_build>=0.11.9,<0.12"
]
build-backend = "uv_build"

[project]
name = "samsara"
version = "0.11.2"
description = "Samsara (向死而驗) — a death-first verification workflow of skills, agents, and hooks for Claude Code and other agent platforms"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pytest>=9.0.2",
  "jinja2 (>=3.1.6,<4.0.0)",
  "pre-commit>=4.5.1",
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
  "pytest-asyncio>=1.3.0",
  "rich>=15.0.0",
  "typer>=0.24.2",
  "hydra-core>=1.3.2",
  "tomli-w>=1.0"
]

[project.scripts]
samsara-cli = "samsara_cli.main:app"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
pythonpath = [
  "."
]
addopts = "-ra -q -s"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning"
]
minversion = "9.0"
markers = [
  "integration: marks tests as integration tests (require API key and --model)",
  "requires_codex: marks tests that require a local Codex CLI installation",
  "requires_gemini: marks tests that require a local Gemini CLI installation"
]

[tool.uv.build-backend]
module-name = "samsara_cli"
module-root = ""
